fix: change z-index on header some elements were previously above it

--- a/src/styles/components/header/index.scss
+++ b/src/styles/components/header/index.scss
@@ -12,4 +12,5 @@
   background-color: $white;
   font-family: $secondary_font_family;
   font-weight: $font_regular;
+  z-index: 99;
 }
